# PolynomialCalculator

./: .gitignore  .pre-commit-config.yaml  BFGS.py  CHANGELOG.md  LICENSE  MANIFEST.in  PolyCalc_demo.ipynb  README.md  __init__.py  class_notes.txt  cli.py  conjugate_gradient.py  construct_finite_field.py  demo.py  lattice_tj.py  linesearch.py  polycalc.py  polycalc_cli.py  pyproject.toml  setup.py  simplex_method.py  test_conjugate_gradient.py  test_construct_finite_field.py  test_linesearch.py  test_simplex_method.py  trust_region.py  version.py
algebra/: __init__.py  construct_finite_field.py  gram_schmidt_numpy.py  lattice_enumeration.py  lll.py  log_util.py  norms.py
archive/: ReadMe  polynomial.py
benchmarks/: README.md  compare_benchmarks.py  conftest.py  test_numbers_bench.py  test_poly_ops_bench.py
core/: Readme.md  collect_like_terms.py  demo.py  division_algorithm.py  formulas.py  ideal.py  lattice.py  lattice_enumeration.py  lll.py  log_util.py  matrix.py  norms.py  numbers.py  orderings.py  poly_parser.py  polycalc_numbers.py  polynomial.py  test_collect_like_terms.py  test_dfs.py  test_formulas.py  test_ideal.py  test_lattice.py  test_lattice_enumeration.py  test_lll.py  test_matrix.py  test_norms.py  test_numbers.py  test_orderings.py  test_poly_parser.py  test_polycalc_numbers.py  test_polynomial.py  test_simplex_method.py  test_variable.py  test_vector.py  vector.py
docs/: SPEED_GUIDE.md
finite_fields/: construct_finite_field.py  find_irreducible_polynomial.py  test_construct_finite_field.py  test_find_irreducible_polynomial.py
matrix/: matrix_operations.py  test_matrix_operations.py
multivariable/: CollectLikeTerms.py  MultivariablePolynomial.py  Notes.txt  Readme  Readme.md  Readme.mk  collect_like_terms.py  collect_like_terms_test.py  division_algorithm.py  division_algorithm_test.py  formulas.py  formulas_test.py  multivariable_polynomial.py  multivariable_polynomial_test.py  orderings.py  parser.py  poly_parser.py  poly_parser_test.py
(+78 files in other folders)
